--- a/docker-compose.dev.sample.yaml
+++ b/docker-compose.dev.sample.yaml
@@ -28,3 +28,4 @@ services:
       DEBUG: 'true'
       DSN: mysql://user:userpass@tcp(db:3306)/database
       GOOGLE_APPLICATION_CREDENTIALS: <firebase_adminsdk.json>
+      UPLOADS_DIR: /build/uploads
