--- a/docker-compose.dev.sample.yaml
+++ b/docker-compose.dev.sample.yaml
@@ -26,7 +26,7 @@ services:
       - 1323:1323
     environment:
       DEBUG: 'true'
-      DSN: mysql://user:userpass@tcp(db:3306)/database
+      DSN: mysql://user:userpass@tcp(db:3306)/database?parseTime=true
       # Currently, don't have to set this veriable.
       # Single mock user is supplied for now.
       GOOGLE_APPLICATION_CREDENTIALS: <firebase_adminsdk.json>
