--- a/docker-compose.dev.sample.yaml
+++ b/docker-compose.dev.sample.yaml
@@ -21,16 +21,22 @@ services:
     container_name: comusic_api
     volumes:
       - ./:/build
+      # See environment.GOOGLE_APPLICATION_CREDENTIALS
+      # - /path/to/host/credentials/directory:/credentials
     command: make dev
     ports:
       - 1323:1323
     environment:
       DEBUG: 'true'
       DSN: mysql://user:userpass@tcp(db:3306)/database?parseTime=true
-      # Currently, don't have to set this veriable.
-      # Single mock user is supplied for now.
-      GOOGLE_APPLICATION_CREDENTIALS: <firebase_adminsdk.json>
       # Local directory to upload files.
       UPLOADS_DIR: /build/uploads
       # Base URL to retrieve the uploaded files.
       UPLOADS_PATH: http://localhost:1323/uploads
+
+      # Set path to firebase adminsdk json file.
+      # As an example, it's put in /credentials directory on container which is
+      # connected to /path/to/host/credentials/directory, as configured at volumes directive above.
+      # GOOGLE_APPLICATION_CREDENTIALS: /credentials/<firebase_adminsdk.json>
+
+      #SENDGRID_API_KEY: <sendgrid-api-key>
